# magistrate

./: .dir-locals.el  .env  .gitignore  CMakeLists.txt  Dockerfile  Dockerfile-ubuntu  LICENSE  README.md  build-checkpoint.sh  docker-compose.yml  licence  makebuild.sh
ci/: build_against_vt.sh  build_cpp.sh  (+1 more)
examples/: CMakeLists.txt  checkpoint_example_1.cc  checkpoint_example_1_nonintrusive.cc  checkpoint_example_2.cc  checkpoint_example_2_nonintrusive.cc  checkpoint_example_3.cc  checkpoint_example_3_nonintrusive.cc  checkpoint_example_nonintrusive.cc  checkpoint_example_polymorphic.cc  checkpoint_example_polymorphic_macro.cc  checkpoint_example_polymorphic_macro_nonintrusive.cc  checkpoint_example_polymorphic_nonintrusive.cc  checkpoint_example_to_file.cc  checkpoint_example_to_file_nonintrusive.cc  checkpoint_example_traversal.cc  checkpoint_example_traversal_nonintrusive.cc  checkpoint_example_user_traits.cc  checkpoint_example_user_traits.hpp  checkpoint_example_virtual.cc  checkpoint_example_virtual_macro.cc  checkpoint_file.cc  checkpoint_traversal.cc  checkpoint_traversal_nonintrusive.cc  serdes_example_1.cc  serdes_example_2.cc  serdes_example_3.cc  serdes_example_nonintrusive.cc  serdes_example_virtual.cc
src/: CMakeLists.txt  dispatch.h  dispatch.impl.h  dispatch_deserializer.h  dispatch_serializer.h  managed_buffer.h  memory_serializer.h  packer.h  packer.impl.h  serdes.h  serdes_all.h  serdes_common.h  serdes_headers.h  serdes_interface.h  serializable_traits.h  serialization_library_headers.h  serialize_interface.h  serialize_interface.impl.h  sizer.cc  sizer.h  unpacker.cc  unpacker.h
src/buffer/: buffer.h  managed_buffer.h  user_buffer.h
src/checkpoint/: checkpoint.h  checkpoint_api.h  checkpoint_api.impl.h  cmake_config.h.in  common.h  detector.h  serdes_all.h  serdes_common.h  serdes_headers.h  serdes_interface.h  serialize_interface.impl.h  serializers_all.h
src/checkpoint/buffer/: buffer.h  io_buffer.cc  io_buffer.h  managed_buffer.h  user_buffer.h
src/checkpoint/container/: array_serialize.h  atomic_serialize.h  chrono_serialize.h  container_serialize.h  enum_serialize.h  function_serialize.h  kokkos_array.h  kokkos_complex_serialize.h  kokkos_pair_serialize.h  kokkos_unordered_map_serialize.h  list_serialize.h  map_serialize.h  ompi_serialize.h  optional_serialize.h  queue_serialize.h  raw_ptr_serialize.h  shared_ptr_serialize.h  string_serialize.h  thread_serialize.h  tuple_serialize.h  unique_ptr_serialize.h  variant_serialize.h  vector_serialize.h  view_equality.h  view_serialize.h  view_traits_extract.h  view_traverse_manual.h  view_traverse_ndim.h
src/checkpoint/dispatch/: allocator.h  buffer_size_error.h  checker.cc  checker.h  checker.impl.h  clean_type.h  dispatch.h  dispatch.impl.h  dispatch_byte_macro.h  dispatch_common.h  dispatch_deserializer.h  dispatch_serializer.h  dispatch_serializer_byte.h  dispatch_serializer_nonbyte.h  dispatch_virtual.h  reconstructor.h  reconstructor_tag.h  type_registry.h
src/checkpoint/dispatch/vrt/: base.h  base_base.h  derived.h  inheritance_assert_helpers.h  link_derived_to_base_idx.h  object_registry.h  registry_common.h  serialize_instantiator.h  serializer_registry.h  static_dispatch_typeidx.h  type_registry.h  virtual_serialize.h  virtual_serialize_traits.h
src/checkpoint/serializers/: base_serializer.h  footprinter.cc  footprinter.h  memory_serializer.h  packer.h  packer.impl.h  sanitizer.cc  sanitizer.h  sanitizer.impl.h  serializer_ref.h  serializers_headers.h  sizer.cc  sizer.h  stream_serializer.h  unpacker.cc  unpacker.h  unpacker.impl.h
src/checkpoint/traits/: checkpoint_traits.h  reconstructor_traits.h  serdes_traits.h  serializable_traits.h  user_traits.h
src/container/: array_serialize.h  container_serialize.h  enum_serialize.h  list_serialize.h  map_serialize.h  string_serialize.h  tuple_serialize.h  vector_serialize.h  view_equality.h  view_serialize.h  view_traits_extract.h  view_traverse_manual.h  view_traverse_ndim.h
src/dispatch/: dispatch.h  dispatch.impl.h  dispatch_byte_macro.h  dispatch_common.h  dispatch_deserializer.h  dispatch_serializer.h  dispatch_serializer_byte.h  dispatch_serializer_nonbyte.h  dispatch_virtual.h
src/serializers/: base_serializer.h  memory_serializer.h  packer.h  packer.impl.h  serializers_headers.h  sizer.cc  sizer.h  unpacker.cc  unpacker.h
src/traits/: serdes_traits.h  serializable_traits.h
tests/: CMakeLists.txt
tests/unit/: kokkos-serialize.cc  kokkos.cc  main.cc  test_byte_macro.cc  test_bytecopy_trait.cc  test_commons.h  test_container.cc  test_footprinter.cc  test_harness.h  test_interface.cc  test_kokkos_0d_commons.h  test_kokkos_1d_commons.h  test_kokkos_2d_commons.h  test_kokkos_3d_commons.h  test_kokkos_integration_commons.h  test_kokkos_serialize.cc  test_kokkos_serialize_0d.cc  test_kokkos_serialize_1d.cc  test_kokkos_serialize_2d.cc  test_kokkos_serialize_2d_const.cc  test_kokkos_serialize_3d.cc  test_kokkos_serialize_3d_left.cc  test_kokkos_serialize_3d_right.cc  test_kokkos_serialize_3d_stride.cc  test_kokkos_serialize_array.cc  test_kokkos_serialize_complex.cc  test_kokkos_serialize_dynrankview.cc  test_kokkos_serialize_integration.cc  test_kokkos_serialize_nd.cc  test_kokkos_serialize_pair.cc  test_kokkos_serialize_special.cc  test_kokkos_serialize_unordered_map.cc  test_object.cc  test_optional.cc  test_polymorphic.cc  test_reconstruct.cc  test_serialiation_error_checking.cc  test_serialization_error_checking.cc  test_serialize_file.cc  test_serialize_stream.cc  (+10 more)
tests/unit/tests/: test_bytecopy_trait.cc  test_container.cc  test_sizer.cc
tests/unit/tests_mpi/: kokkos-serialize-mpi.cc  mpi-init.h  test_commons_mpi.h  test_kokkos_serialize_0d_mpi.cc  test_kokkos_serialize_1d_mpi.cc  test_kokkos_serialize_2d_mpi.cc  test_kokkos_serialize_2d_mpi_left.cc  test_kokkos_serialize_2d_mpi_right.cc  test_kokkos_serialize_2d_mpi_stride.cc  test_kokkos_serialize_3d_mpi.cc  test_kokkos_serialize_3d_mpi_left.cc  test_kokkos_serialize_3d_mpi_right.cc  test_kokkos_serialize_3d_mpi_stride.cc  test_kokkos_serialize_integration_mpi.cc
(+80 files in other folders)
